# karios-patch

./: .gitignore  README.md  WORKTREE_TRIAGE.md  bugs.md  decisions.md  index.html  package-lock.json  package.json  progress.md
.github/ISSUE_TEMPLATE/: feedback.yml
docs/: github-update-source.md  icon-system.md
scripts/: package-portable.ps1
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup.rs  commands.rs  diagnostics.rs  diff.rs  error.rs  hash.rs  instance.rs  main.rs  manifest.rs  patch.rs  preferences.rs  state.rs  updater.rs
