[package]
name = "kairos_patch"
version = "0.1.2"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
thiserror = "2"
walkdir = "2"
zip = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 2
codegen-units = 1
panic = "abort"
strip = "debuginfo"
